<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/txtTituloDisciplinas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_disciplinas"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/d_programacao"
        android:padding="12dp"
        android:background="#EEEEEE"
        android:layout_marginBottom="8dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/d_banco_dados"
        android:padding="12dp"
        android:background="#EEEEEE"
        android:layout_marginBottom="8dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/d_engenharia"
        android:padding="12dp"
        android:background="#EEEEEE"
        android:layout_marginBottom="8dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/d_web"
        android:padding="12dp"
        android:background="#EEEEEE"
        android:layout_marginBottom="8dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/d_mobile"
        android:padding="12dp"
        android:background="#EEEEEE"
        android:layout_marginBottom="8dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/d_ia"
        android:padding="12dp"
        android:background="#EEEEEE"
        android:layout_marginBottom="24dp" />

    <Button
        android:id="@+id/btnVoltarDisciplinas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_voltar" />

</LinearLayout>